Actualización de métodos deprecados y eliminación de caracteres especiales en los comentarios